--- a/src/Styles/Carousel.css
+++ b/src/Styles/Carousel.css
@@ -1,6 +1,6 @@
 .transparent-text-block1 {
   position: relative;
-  max-width: 100%; /* Maximum width */
+  max-width: 100%; 
   margin: 0 auto;
 }
 
@@ -11,12 +11,16 @@
   background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
   color: #f1f1f1; /* Grey text */
   width: 100%; /* Full width */
-  height:100%;
-  padding: 20px; /* Some padding */
+  height:30%;
+  padding: 20px;
 }
 
 .content1 {
-  font-size: 80px;
+  font-size: 60px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   
+}
+
+.food {
+  width: 100%;
+  height: 40em;
 }
