--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,9 +1,10 @@
-#food {
-    height: 650px;
-    width: 100%;
+html{
+   margin: 0;
+   padding: 0;
 }
+
 #section1{
-    height: 650px;
+    height: 40em;   
 }
 
 .enroll-form {
@@ -24,27 +25,7 @@ h2 {
 }
 
 #section2 {
-    
-    height: 450px;
-}
-
-#image-overlay {
-    position: relative;
-
-}
-
-#text-block{
-    position: absolute;
-    top:150px;
-    left:80px;
-    color: white;
-    padding-left: 20px;
-    padding-right:20px;
-    background-color: transparent;
-    width:60%;
-    font-size: 50px;
-    font-weight: bold;
-    line-height: normal;
+    padding-bottom: 50px;
 }
 
 .class-img{
@@ -52,14 +33,15 @@ h2 {
 }
 
 #man{
-    height:100%;
+    height:70%;
     width:50%;
-    margin-left: 100px;
+    margin-left: 180px;
+    margin-top: 50px;
 }
 
 .left-col{
     font-size:50px;
-    margin-left: 20px;
+    margin-left: 40px;
     font-weight: bold;
     margin-top: 15px;
 }
@@ -69,7 +51,7 @@ h2 {
 }
 
 #part-text{
-    margin: 20px;
+    margin-top: 40px;
     text-align: center;
 }
 
@@ -81,4 +63,8 @@ h2 {
 .section4 {
     padding-top:80px;
     background-color: ghostwhite;
+}
+
+@media (min-device-width:600px) {
+    
 }
