--- a/client/src/Styles/Contact.css
+++ b/client/src/Styles/Contact.css
@@ -1,4 +1,8 @@
-.contact-form {
+.get-in-touch-section {
+    margin: 10px 190px;
+}
+
+.get-in-touch, .say-something {
     border-style: outset;
     border-width: 0px;
     margin: 60px auto;
@@ -10,19 +14,15 @@
 }
 
 .get-in-touch {
-    background-color: tomato;
-    display: block;
-    float: left;
-    width:350px;
+    background-color: tomato; 
+    
     height: 400px;
     padding: 40px 15px 10px 30px;
     
 }
 
 .say-something{
-    display: block;
-    float: right;
-    width: 550px;
+   
     padding: 40px 40px 10px 40px;
 }
 
@@ -33,4 +33,21 @@
 
 .right-col1 {
     margin-top: 15px;
+}
+
+@media screen and (min-width: 575px) and (max-width: 979px) {
+    .get-in-touch-section {
+        margin: 10px 100px;
+        font-size: 14px;
+        line-height: 1.5em;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width:574px) {
+    .get-in-touch-section {
+        margin: 10px 80px;
+        font-size: 12px;
+        line-height: 1.2em;
+    }
+    
 }
