--- a/client/src/Styles/Dashboard.css
+++ b/client/src/Styles/Dashboard.css
@@ -40,7 +40,7 @@ a:hover {
 }
 
 #main-section{
-    margin: 20px 0px 10px 30px;
+    margin: 30px 0px 10px 30px;
     
 }
 
@@ -97,4 +97,32 @@ p {
     margin-top: 40px;
     margin-left:30px;
     color:red;
+}
+
+@media screen and (min-width:978px) and (max-width: 1024px) {
+    #vertical-nav {
+        height: 680px;
+    }
+    #foodimg {
+        height: 380px;
+    }
+    #upcoming-img {
+        height: 40%;
+    }
+
+    .upcoming-right-col{
+        margin-top: 20px;
+    }
+}
+
+@media screen and (min-width: 575px) and (max-width: 979px) {
+    
+}
+
+@media screen and (min-width: 320px) and (max-width:360px) {
+    
+}
+
+@media screen and (min-width: 361px) and (max-width:574px) {
+    
 }
