--- a/client/src/Styles/Navbar.css
+++ b/client/src/Styles/Navbar.css
@@ -4,12 +4,10 @@
     margin-left: 30px;
 }
 
-.btn{
-    margin: 15px;
-}
 
-#button {
-    margin-left: 900px;
+.navbar-buttons {
+    margin-left: 750px;
+    
 }
 
 #logoicon{
@@ -17,4 +15,43 @@
     padding-right: 10px;
     padding-bottom: 3px;
     width: 50px;
+}
+
+.nav-item {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 20px;
+}
+
+
+@media screen and (min-width:978px) and (max-width: 1024px) {
+    .navbar-buttons {
+        margin-left: 500px;
+    }
+
+}
+
+@media screen and (min-width: 575px) and (max-width: 979px) {
+    .navbar-buttons {
+        margin-left: 500px;
+    }
+
+    .nav-item {
+        margin-left: 20px;
+        margin-bottom: 0px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width:360px) {
+    .nav-item {
+        margin-left: 20px;
+        margin-bottom: 0px;
+    }
+}
+
+@media screen and (min-width: 361px) and (max-width:574px) {
+    .nav-item {
+        margin-left: 20px;
+        margin-bottom: 0px;
+    }
 }
